--- a/notebook/data_cleaning.ipynb
+++ b/notebook/data_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,88 +23,269 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_location_rides = \"~/Downloads/archive/cab_rides.csv\"\n",
-    "data_location_weather = \"~/Downloads/archive/weather.csv\"\n",
-    "df_rides = pd.read_csv(data_location_rides)\n",
-    "df_weather = pd.read_csv(data_location_weather)"
+    "data_location_movie = \"~/Downloads/archive-2/Netflix_Dataset_Movie.csv\"\n",
+    "data_location_rating = \"~/Downloads/archive-2/Netflix_Dataset_Rating.csv\"\n",
+    "df_movie = pd.read_csv(data_location_movie)\n",
+    "df_rating = pd.read_csv(data_location_rating)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Movie_ID</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>Dinosaur Planet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>Isle of Man TT 2004 Review</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>Character</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>Paula Abdul's Get Up &amp; Dance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>The Rise and Fall of ECW</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Financial District         58851\n",
-       "Theatre District           57798\n",
-       "Back Bay                   57780\n",
-       "Haymarket Square           57764\n",
-       "Boston University          57764\n",
-       "Fenway                     57757\n",
-       "North End                  57756\n",
-       "Northeastern University    57755\n",
-       "South Station              57749\n",
-       "West End                   57575\n",
-       "Beacon Hill                57403\n",
-       "North Station              57119\n",
-       "Name: destination, dtype: int64"
+       "   Movie_ID  Year                          Name\n",
+       "0         1  2003               Dinosaur Planet\n",
+       "1         2  2004    Isle of Man TT 2004 Review\n",
+       "2         3  1997                     Character\n",
+       "3         4  1994  Paula Abdul's Get Up & Dance\n",
+       "4         5  2004      The Rise and Fall of ECW"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_rides[\"destination\"].value_counts()"
+    "df_movie.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def loadCSVData(path, year, month, service):\n",
-    "    p = Path(path)\n",
-    "    if not p.exists():\n",
-    "        url = f\"https://s3.amazonaws.com/nyc-tlc/trip+data/{service}_tripdata_{year}-{month}.csv\"\n",
-    "        print(url)\n",
-    "        r = requests.get(url)\n",
-    "        with open(path, \"wb\") as fd:\n",
-    "            fd.write(r.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://s3.amazonaws.com/nyc-tlc/trip+data/yellow_tripdata_2016-01.csv\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User_ID</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Movie_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>712664</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1331154</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2632461</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>44937</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>656399</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   User_ID  Rating  Movie_ID\n",
+       "0   712664       5         3\n",
+       "1  1331154       4         3\n",
+       "2  2632461       3         3\n",
+       "3    44937       5         3\n",
+       "4   656399       4         3"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "loadCSVData(\"./yellow15-01.csv\", \"2016\", \"01\", \"yellow\")"
+    "df_rating.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1905    117075\n",
+       "2452    102721\n",
+       "4306    102376\n",
+       "571     101450\n",
+       "3860     98545\n",
+       "         ...  \n",
+       "4161      1215\n",
+       "1375      1213\n",
+       "717       1212\n",
+       "2870      1092\n",
+       "4238      1042\n",
+       "Name: Movie_ID, Length: 1350, dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv(\"./yellow15-01.csv\")"
+    "df_rating[\"Movie_ID\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Movie_ID</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1904</th>\n",
+       "      <td>1905</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>Pirates of the Caribbean: The Curse of the Bla...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Movie_ID  Year                                               Name\n",
+       "1904      1905  2003  Pirates of the Caribbean: The Curse of the Bla..."
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_movie.loc[df_movie[\"Movie_ID\"] == 1905]"
    ]
   }
  ],
