--- a/notebook/data_cleaning.ipynb
+++ b/notebook/data_cleaning.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "4                    0.3         30.30                   2.5          0.0  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "4       4  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -475,15 +475,15 @@
        "161     88237\n",
        "186     80580\n",
        "        ...  \n",
-       "187         1\n",
        "105         1\n",
        "172         1\n",
-       "27          1\n",
        "176         1\n",
+       "27          1\n",
+       "187         1\n",
        "Name: PULocationID, Length: 257, dtype: int64"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,14 +495,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Generating drivers "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -602,37 +604,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>Diaz</td>\n",
-       "      <td>Bobby</td>\n",
-       "      <td>Q9RV2T</td>\n",
+       "      <td>Phipps</td>\n",
+       "      <td>Faye</td>\n",
+       "      <td>L2VMFM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>Walker</td>\n",
-       "      <td>Mary</td>\n",
-       "      <td>T7DRZD</td>\n",
+       "      <td>Terrell</td>\n",
+       "      <td>Danette</td>\n",
+       "      <td>DG429Q</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>Myles</td>\n",
-       "      <td>Thomas</td>\n",
-       "      <td>MMG99I</td>\n",
+       "      <td>Shelton</td>\n",
+       "      <td>Randall</td>\n",
+       "      <td>2MWOFQ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>Rosado</td>\n",
-       "      <td>Robert</td>\n",
-       "      <td>F5HUMU</td>\n",
+       "      <td>Charpia</td>\n",
+       "      <td>Lissette</td>\n",
+       "      <td>2DTIWR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>Schenkel</td>\n",
-       "      <td>Brandy</td>\n",
-       "      <td>Y6M9CQ</td>\n",
+       "      <td>Mischler</td>\n",
+       "      <td>George</td>\n",
+       "      <td>OQE8LY</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -640,14 +642,14 @@
       ],
       "text/plain": [
        "   driver_id last_name first_name plate_number\n",
-       "0          0      Diaz      Bobby       Q9RV2T\n",
-       "1          1    Walker       Mary       T7DRZD\n",
-       "2          2     Myles     Thomas       MMG99I\n",
-       "3          3    Rosado     Robert       F5HUMU\n",
-       "4          4  Schenkel     Brandy       Y6M9CQ"
+       "0          0    Phipps       Faye       L2VMFM\n",
+       "1          1   Terrell    Danette       DG429Q\n",
+       "2          2   Shelton    Randall       2MWOFQ\n",
+       "3          3   Charpia   Lissette       2DTIWR\n",
+       "4          4  Mischler     George       OQE8LY"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1071,7 @@
        "[2463500 rows x 21 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1097,7 @@
        "Name: payment_type, dtype: int64"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1131,18 +1133,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_test = df_rides[3000:13000]\n",
     "df_test.to_csv(\"../data/rides_test2.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1156,7 +1165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
