Adding fields to movies

--- a/notebook/create_csv.ipynb
+++ b/notebook/create_csv.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "4  False    31975      Sesame Street: Elmo Loves You!       1.400   True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "4        5  113041  11862.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "4        5  113041   11862"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "4        5  113041   11862"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,12 +421,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "tmdb_ids = df_valid_links[\"tmdbId\"].head(NMOVIES).to_numpy()\n",
     "movie_ids = df_valid_links[\"movieId\"].head(NMOVIES).to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>imdbId</th>\n",
+       "      <th>tmdbId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>18775</th>\n",
+       "      <td>92783</td>\n",
+       "      <td>1541777</td>\n",
+       "      <td>470358</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       movieId   imdbId  tmdbId\n",
+       "18775    92783  1541777  470358"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_valid_links[df_valid_links[\"tmdbId\"] == 470358]"
    ]
   },
   {
@@ -445,30 +501,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9dc1bd879fa64d25afeb1db1f1e58795",
+       "model_id": "2af236f2c9ff4e88b178fdd1740b8a37",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=50000.0), HTML(value='')))"
+       "  0%|          | 0/50000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\anyio\\_backends\\_trio.py:126: TrioDeprecationWarning: trio.MultiError is deprecated since Trio 0.22.0; use BaseExceptionGroup (on Python 3.11 and later) or exceptiongroup.BaseExceptionGroup (earlier versions) instead (https://github.com/python-trio/trio/issues/2211)\n",
+      "  class ExceptionGroup(BaseExceptionGroup, trio.MultiError):\n",
+      "WARNING:root:FAILED Request {'method': 'GET', 'url': 'https://api.themoviedb.org/3/movie/470358?api_key=341aa223bceaf3285598e2a6511bcd4b&language=en-US'}: Permanently failed. Last error: Bad response status code: 404. Should be in (200,)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "CPU times: user 6min 25s, sys: 29.3 s, total: 6min 54s\n",
-      "Wall time: 12min 15s\n"
+      "CPU times: total: 18min 28s\n",
+      "Wall time: 24min 24s\n"
      ]
     }
    ],
@@ -482,27 +546,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "responses_metadata[18565] = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "18565\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(50000):\n",
+    "    if type(responses_metadata[i]) is not type(responses_metadata[0]):\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1995"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "datetime.datetime.strptime('1995-10-30', \"%Y-%m-%d\").year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 16, 'name': 'Animation'},\n",
+       " {'id': 12, 'name': 'Adventure'},\n",
+       " {'id': 10751, 'name': 'Family'},\n",
+       " {'id': 35, 'name': 'Comedy'}]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "responses_metadata[0][\"genres\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'release_date'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [53]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#movie_genres = [[responses_metadata[i][\"genres\"][j][\"name\"] for j in range(len(responses_metadata[i][\"genres\"]))]\u001b[39;00m\n\u001b[0;32m      2\u001b[0m                 \u001b[38;5;66;03m#for i in range(len(responses_metadata))]\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m movie_year \u001b[38;5;241m=\u001b[39m [datetime\u001b[38;5;241m.\u001b[39mdatetime\u001b[38;5;241m.\u001b[39mstrptime(responses_metadata[i][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrelease_date\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm-\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39myear \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(responses_metadata))]\n\u001b[0;32m      6\u001b[0m titles \u001b[38;5;241m=\u001b[39m [responses_metadata[i][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moriginal_title\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(responses_metadata))]\n\u001b[0;32m      8\u001b[0m popularities \u001b[38;5;241m=\u001b[39m [responses_metadata[i][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpopularity\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(responses_metadata))]\n",
+      "Input \u001b[1;32mIn [53]\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#movie_genres = [[responses_metadata[i][\"genres\"][j][\"name\"] for j in range(len(responses_metadata[i][\"genres\"]))]\u001b[39;00m\n\u001b[0;32m      2\u001b[0m                 \u001b[38;5;66;03m#for i in range(len(responses_metadata))]\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m movie_year \u001b[38;5;241m=\u001b[39m [datetime\u001b[38;5;241m.\u001b[39mdatetime\u001b[38;5;241m.\u001b[39mstrptime(\u001b[43mresponses_metadata\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrelease_date\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm-\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39myear \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(responses_metadata))]\n\u001b[0;32m      6\u001b[0m titles \u001b[38;5;241m=\u001b[39m [responses_metadata[i][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moriginal_title\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(responses_metadata))]\n\u001b[0;32m      8\u001b[0m popularities \u001b[38;5;241m=\u001b[39m [responses_metadata[i][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpopularity\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(responses_metadata))]\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'release_date'"
      ]
     }
    ],
    "source": [
     "movie_genres = [[responses_metadata[i][\"genres\"][j][\"name\"] for j in range(len(responses_metadata[i][\"genres\"]))]\n",
-    "                for i in range(len(responses_metadata))]\n",
+    "                #for i in range(len(responses_metadata))]\n",
     "\n",
-    "movie_release_dates = [responses_metadata[i][\"release_date\"] for i in range(len(responses_metadata))]\n",
+    "movie_year = [datetime.datetime.strptime(responses_metadata[i][\"release_date\"], \"%Y-%m-%d\").year for i in range(len(responses_metadata))]\n",
     "\n",
     "titles = [responses_metadata[i][\"original_title\"] for i in range(len(responses_metadata))]\n",
     "\n",
     "popularities = [responses_metadata[i][\"popularity\"] for i in range(len(responses_metadata))]\n",
     "\n",
+    "budget = [responses_metadata[i][\"budget\"] for i in range(len(responses_metadata))]\n",
+    "\n",
+    "revenue = [responses_metadata[i][\"revenue\"] for i in range(len(responses_metadata))]\n",
+    "\n",
+    "vote_average = [responses_metadata[i][\"vote_average\"] for i in range(len(responses_metadata))]\n",
+    "\n",
+    "vote_count = [responses_metadata[i][\"vote_count\"] for i in range(len(responses_metadata))]\n",
+    "\n",
+    "country = [responses_metadata[i][\"production_countries\"][0][\"iso_3166_1\"] for i in range(len(responses_metadata))]\n",
+    "\n",
+    "duration = [responses_metadata[i][\"runtime\"] for i in range(len(responses_metadata))]\n",
+    "\n",
+    "studios = [responses_metadata[i][\"production_companies\"][j][\"name\"] for i in range(len(responses_metadata))]\n",
     "\n",
     "df_movies = pd.DataFrame()\n",
     "\n",
@@ -511,7 +665,13 @@
     "df_movies[\"popularity\"] = popularities\n",
     "df_movies[\"original_title\"] = titles\n",
     "df_movies[\"genres\"] = movie_genres\n",
-    "df_movies[\"release_date\"] = movie_release_dates"
+    "df_movies[\"year\"] = movie_year\n",
+    "df_movies[\"budget\"] = budget\n",
+    "df_movies[\"revenue\"] = revenue\n",
+    "df_movies[\"country\"] = country\n",
+    "df_movies[\"duration\"] = duration\n",
+    "df_movies[\"vote_count\"] = vote_count\n",
+    "df_movies[\"vote_average\"] = vote_average\n"
    ]
   },
   {
@@ -1014,7 +1174,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1028,7 +1188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
